# ezytutors

./: Cargo.toml  docker-compose.yml
tutor-db/: .env  Cargo.toml
tutor-db/migrations/: 20230828211420_database.sql  20230831202756_ezy_course_c5_database.sql  20231031140826_ezy_course_c6_database.sql
tutor-db/src/iter2/: handlers.rs  models.rs  routes.rs  state.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  state.rs
tutor-db/src/iter5/: routes.rs
tutor-db/src/iter5/dbaccess/: course.rs
tutor-db/src/iter5/models/: course.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs
