[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix web framework and run-time
actix-web = "4.3.1"
actix-rt = "2.9.0"

# Environment variable access libraries
dotenv = "0.15.0"

#Database access
sqlx = { version = "0.7.1", default_features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }

# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }

# Other utils
chrono = { version = "0.4.22", features = ["serde"] }

# Openssl for build
openssl = { version = "0.10.41", features = ["vendored"] }
